--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -22,6 +22,7 @@
     border-color: var(--color-primary-variant);
 }
 .contact__option-icon{
+    color: var(--color-white);
     font-size: 1.5rem;
     margin-bottom: 0.5rem;
 }
@@ -32,6 +33,9 @@
 }
 .contact__option h5{
     color: var(--color-light);
+}
+.contact__option h4{
+    color: var(--color-white);
 }
 /*============FORM==============*/
 form {
